# 8-puzzle

./: CMakeLists.txt  README.md
libraries/: CMakeLists.txt
libraries/puzzle/: CMakeLists.txt
libraries/puzzle/include/puzzle/: Board.hpp  Solver.hpp
libraries/puzzle/src/: Board.cpp  Solver.cpp
libraries/puzzle/tests/: test_board.cpp  test_solver.cpp
src/: main.cpp
